# EviSense-ncs-v-2-4-2

./: .gitignore  CMakeLists.txt  Kconfig  prj.conf
bindings/: reset-switch.yaml
boards/arm/EviSense-pcb-v-2-3/: CMakeLists.txt  Kconfig.board  Kconfig.defconfig  evisense_pcb_v_2_3.dts  evisense_pcb_v_2_3.yaml  evisense_pcb_v_2_3_common-pinctrl.dtsi  evisense_pcb_v_2_3_common.dts  evisense_pcb_v_2_3_defconfig  evisense_pcb_v_2_3_ns.dts  evisense_pcb_v_2_3_ns.yaml  evisense_pcb_v_2_3_ns_defconfig
child_image/: mcuboot.conf
include/: EventArray.pb.h  adc.h  aletheia.pb-c.h  algorithms.h  aws_fota.h  battery_gauge.h  bmi160.h  bmi160_defs.h  bmm150.h  buttons.h  buzzer.h  cloud.h  coap.h  commands.h  datalog_mem.h  device_mem.h  epc_mem.h  event_mem.h  events.h  flash.h  gpio.h  hard_reset.h  hibernate.h  i2c.h  imu.h  interrupts.h  led.h  modem.h  notification.h  parameter_mem.h  pwm.h  rfid.h  rtc.h  spi.h  stepdetection.h  system_mem.h  test.h  threads.h  uart.h  usb.h  (+1 more)
src/: certificates.h  main.c  module_description.readme
src/flash/: datalog_mem.c  device_mem.c  epc_mem.c  event_mem.c  parameter_mem.c  system_mem.c
src/logic/: algorithms.c  aws_fota.c  cloud.c  coap.c  commands.c  events.c  hibernate.c  modem.c  notification.c  test.c  threads.c
src/middleware/: adc.c  aletheia.pb-c.c  battery_gauge.c  bmi160.c  bmm150.c  buttons.c  buzzer.c  flash.c  gpio.c  hard_reset.c  i2c.c  imu.c  interrupts.c  led.c  pwm.c  rfid.c  rtc.c  spi.c  stepdetection.c  uart.c  usb.c  watchdog.c
src/protobuf-c/: protobuf-c.c  protobuf-c.h
