cmake_minimum_required(VERSION 3.13.1)
list(APPEND BOARD_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE INTERNAL "")

project(EviSense)

zephyr_include_directories(include)       
zephyr_include_directories(src/protobuf-c)
zephyr_include_directories(src)

target_sources(app PRIVATE src/main.c)
target_sources(app PRIVATE src/middleware/adc.c)
target_sources(app PRIVATE src/middleware/aletheia.pb-c.c)
#target_sources(app PRIVATE src/middleware/battery_gauge.c)
#target_sources(app PRIVATE src/middleware/bmi160.c)
#target_sources(app PRIVATE src/middleware/bmm150.c)
#target_sources(app PRIVATE src/middleware/buttons.c)
#target_sources(app PRIVATE src/middleware/buzzer.c)
#target_sources(app PRIVATE src/middleware/flash.c)
target_sources(app PRIVATE src/middleware/gpio.c)
target_sources(app PRIVATE src/middleware/i2c.c)
#target_sources(app PRIVATE src/middleware/imu.c)
target_sources(app PRIVATE src/middleware/interrupts.c)
#target_sources(app PRIVATE src/middleware/led.c)
target_sources(app PRIVATE src/middleware/pwm.c)
#target_sources(app PRIVATE src/middleware/rfid.c)
target_sources(app PRIVATE src/middleware/rtc.c)
target_sources(app PRIVATE src/middleware/spi.c)
#target_sources(app PRIVATE src/middleware/stepdetection.c)
target_sources(app PRIVATE src/middleware/uart.c)
#target_sources(app PRIVATE src/middleware/usb.c)
#target_sources(app PRIVATE src/middleware/watchdog.c)

target_sources(app PRIVATE src/flash/datalog_mem.c)
target_sources(app PRIVATE src/flash/device_mem.c)
#target_sources(app PRIVATE src/flash/epc_mem.c)
#target_sources(app PRIVATE src/flash/event_mem.c)
target_sources(app PRIVATE src/flash/parameter_mem.c)
target_sources(app PRIVATE src/flash/system_mem.c)

#target_sources(app PRIVATE src/logic/algorithms.c)
#target_sources(app PRIVATE src/logic/aws_fota.c)
#target_sources(app PRIVATE src/logic/cloud.c)
#target_sources(app PRIVATE src/logic/coap.c)
#target_sources(app PRIVATE src/logic/commands.c)
#target_sources(app PRIVATE src/logic/hibernate.c)
#target_sources(app PRIVATE src/logic/events.c)
#target_sources(app PRIVATE src/logic/modem.c)
#target_sources(app PRIVATE src/logic/notification.c)
#target_sources(app PRIVATE src/logic/test.c)
target_sources(app PRIVATE src/logic/threads.c)

target_sources(app PRIVATE src/protobuf-c/protobuf-c.c)